// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-image> Component <bolt-image> with ratio object and lazyloading disabled compiles 1`] = `

<bolt-image style="background-color: hsl(233, 33%, 97%);">
  <bolt-ratio aspect-ratio-height="500"
              aspect-ratio-width="500"
              style="--aspect-ratio-height: 500; --aspect-ratio-width: 500;"
  >
    <img class="c-bolt-image__image-placeholder"
         alt="A Rock Climber"
         sizes="auto"
         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
    >
    <img class="c-bolt-image__image"
         alt="A Rock Climber"
         srcset="/images/placeholders/500x500-320.jpg 320w"
         sizes="auto"
         src="/images/placeholders/500x500.jpg"
    >
  </bolt-ratio>
</bolt-image>

`;

exports[`<bolt-image> Component <bolt-image> with ratio object compiles 1`] = `

<bolt-image style="background-color: hsl(233, 33%, 97%);">
  <bolt-ratio aspect-ratio-height="500"
              aspect-ratio-width="500"
              style="--aspect-ratio-height: 500; --aspect-ratio-width: 500;"
  >
    <img class="c-bolt-image__image-placeholder"
         alt="A Rock Climber"
         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
    >
    <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
         alt="A Rock Climber"
         data-srcset="/images/placeholders/500x500-320.jpg 320w"
         data-sizes="auto"
         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
    >
    <noscript>
      <img class="c-bolt-image__image"
           alt="A Rock Climber"
           src="/images/placeholders/500x500.jpg"
           srcset="/images/placeholders/500x500-320.jpg 320w"
      >
    </noscript>
  </bolt-ratio>
</bolt-image>

`;
